--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,16 +1,8 @@
-
 name = "s51journal"
 main = "src/index.ts"
 compatibility_date = "2026-02-25"
 
-type = "javascript"
-
-# KV namespaces
 kv_namespaces = [
-  { binding = "FEED_STATE", id = "" },
-  { binding = "SENT_HASHES", id = "" }
+  { binding = "FEED_STATE", id = "feed_state_id" },
+  { binding = "SENT_HASHES", id = "sent_hashes_id" }
 ]
-
-# GitHub integration (اختیاری)
-[triggers] 
-cron = "* * * * *"  # هر 1 دقیقه
